Update .gitignore to explicitly exclude CLAUDE.md

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ env/
 # Configuration files with sensitive information
 config.yaml
 .env
+CLAUDE.md
 
 # YOURLS directory (reference only, not tracked)
 YOURLS/
